hphp/hack/test/typecheck/assignment_sequencing/unseq_default_arg.php
<?hh

// Lurrrrrrrrrrrr
function g(int $y = 0, int $x = $y++ + $y++): int {
  return $y;
}
